Feat : add Web Demo by Flask

--- a/stt_scic/utils/Data_format_hugging_face.ipynb
+++ b/stt_scic/utils/Data_format_hugging_face.ipynb
@@ -66,12 +66,12 @@
     "for i in range (0,10) : # số lượng parquet (10 parquet đầu )\n",
     "    dataset = pd.read_parquet(f\"vlsp2020_vinai_100h/data/train-0000{i}-of-00035.parquet\") # Đường dẫn tập data đầu tiên\n",
     "\n",
-    "    for index, text in enumerate( dataset[\"transcription\"]) :\n",
+    "    for index, text in enumerate( dataset[\"transcription\"]) :#lưu transcript vào folder labels\n",
     "        with open(os.path.join(output_folder, f\"train-0000{i}-of-00035_{index}.txt\"), \"w\", encoding=\"utf-8\") as f:\n",
     "            f.write(str(text))\n",
     "    for index, audio in enumerate(dataset[\"audio\"]):\n",
     "        audio_bytes = audio[\"bytes\"]  # trích dữ liệu WAV đã mã hóa\n",
-    "        file_path = os.path.join(speech_folder, f\"train-0000{i}-of-00035_{index}.wav\")\n",
+    "        file_path = os.path.join(speech_folder, f\"train-0000{i}-of-00035_{index}.wav\") # lưu vào folder audio \n",
     "        \n",
     "        with open(file_path, \"wb\") as f:  \n",
     "            f.write(audio_bytes)"
